--- a/assets/server/package.json
+++ b/assets/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mongoose": "^5.4.3",
     "nodemon": "^1.18.9",
     "path": "^0.12.7"
   }
