--- a/assets/server/package.json
+++ b/assets/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "express-fileupload": "^1.1.1-alpha.3",
     "mongoose": "^5.4.3",
     "nodemon": "^1.18.9",
     "path": "^0.12.7"
