--- a/assets/server/package.json
+++ b/assets/server/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.16.4",
     "express-fileupload": "^1.1.1-alpha.3",
-    "mongoose": "^5.4.3",
+    "mongoose": "^5.4.18",
     "nodemon": "^1.18.9",
     "path": "^0.12.7"
   }
